modificado enlace CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://kit.fontawesome.com/f41392de63.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/estilos/estilos.css">
+    <link rel="stylesheet" href="estilos/estilos.css">
 
     <title>[IRROMPIBLES]</title>
 </head>
