modificados los src

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
     <script src="https://kit.fontawesome.com/f41392de63.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/estilos/estilos.css">
+    <link rel="stylesheet" href="estilos/estilos.css">
 
     <title>[IRROMPIBLES]</title>
 </head>
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-              <img src="/img/irrompibles logo 2019 blanco-01.png" width="250" alt="">
+              <img src="img/irrompibles logo 2019 blanco-01.png" width="250" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -110,14 +110,14 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <a href="https://www.irrompibles.net/42403-glitchpunk-probamos-el-early-access/" target="_blank"><img src="/img/carousel1.jpg" class="d-block w-100" alt="..."></a>
+                <a href="https://www.irrompibles.net/42403-glitchpunk-probamos-el-early-access/" target="_blank"><img src="img/carousel1.jpg" class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Glitchpunk: ¡probamos el early access!</h5>
                   <p>GHA (Grand Hacker Auto)</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <a href="https://www.irrompibles.net/41996-the-legend-of-zelda-skyward-sword-hd-review/" target="_blank"><img src="/img/carousel2.jpg" class="d-block w-100" alt="..."></a>
+                <a href="https://www.irrompibles.net/41996-the-legend-of-zelda-skyward-sword-hd-review/" target="_blank"><img src="img/carousel2.jpg" class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                   <h5>The Legend of Zelda: Skyward Sword HD [REVIEW]</h5>
                   <p>Poniendo el grito en el cielo</p>
@@ -151,7 +151,7 @@
                     <div class="row justify-content-center">
                     <article class="col-10 col-lg-4 py-1">
                         <figure class="producto">
-                            <img src="/img/carousel4.jpg" alt="" class="img-fluid">
+                            <img src="img/carousel4.jpg" alt="" class="img-fluid">
                             <figcaption class="overlay">
                                 <p class="overlay-texto"><a href="https://www.irrompibles.net/42732-tremenda-filtracion-los-exclusivos-de-playstation-que-llegarian-a-pc/" target="_blank">Tremenda filtración: los exclusivos de PlayStation que llegarían a PC</a></p>
                             </figcaption>
@@ -160,7 +160,7 @@
 
                     <article class="col-10 col-lg-4 py-1">
                         <figure class="producto">
-                            <img src="/img/noticias1.jpg" alt="" class="img-fluid">
+                            <img src="img/noticias1.jpg" alt="" class="img-fluid">
                             <figcaption class="overlay">
                                 <p class="overlay-texto"><a href="https://www.irrompibles.net/42326-microsoft-lo-hizo-las-consolas-xbox-one-podran-correr-juegos-de-series-xs/" target="_blank">Microsoft lo hizo: las consolas Xbox One podrán “correr” juegos de Series X|S</a></p>
                             </figcaption>
@@ -169,7 +169,7 @@
 
                     <article class="col-10 col-lg-4 py-1">
                         <figure class="producto">
-                            <img src="/img/noticias2.jpeg" alt="" class="img-fluid">
+                            <img src="img/noticias2.jpeg" alt="" class="img-fluid">
                             <figcaption class="overlay">
                                 <p class="overlay-texto"><a href="https://www.irrompibles.net/42736-cuatro-anos-despues-nintendo-switch-finalmente-tiene-soporte-para-auriculares-bluetooth/" target="_blank">Cuatro años despues, Nintendo Switch finalmente tiene soporte para auriculares Bluetooth</a></p>
                             </figcaption>
@@ -197,7 +197,7 @@
               <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
                 <div class="row">
                   <div class="col-md-5">
-                    <a href="https://www.irrompibles.net/42403-glitchpunk-probamos-el-early-access/" target="_blank"><img src="/img/carousel1.jpg" class="img-fluid rounded-start" alt="..."></a>
+                    <a href="https://www.irrompibles.net/42403-glitchpunk-probamos-el-early-access/" target="_blank"><img src="img/carousel1.jpg" class="img-fluid rounded-start" alt="..."></a>
                   </div>
                   <div class="col-md-7">
                     <div class="card-body">
@@ -212,7 +212,7 @@
               <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
                 <div class="row">
                   <div class="col-md-5">
-                    <a href="https://www.irrompibles.net/41996-the-legend-of-zelda-skyward-sword-hd-review/" target="_blank"><img src="/img/carousel2.jpg" class="img-fluid rounded-start" alt="..."></a>
+                    <a href="https://www.irrompibles.net/41996-the-legend-of-zelda-skyward-sword-hd-review/" target="_blank"><img src="img/carousel2.jpg" class="img-fluid rounded-start" alt="..."></a>
                   </div>
                   <div class="col-md-7">
                     <div class="card-body">
@@ -227,7 +227,7 @@
               <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
                 <div class="row">
                   <div class="col-md-5">
-                    <a href="https://www.irrompibles.net/42746-deathloop-review/" target="_blank"><img src="/img/revew1.jpg" class="img-fluid rounded-start" alt="..."></a>
+                    <a href="https://www.irrompibles.net/42746-deathloop-review/" target="_blank"><img src="img/revew1.jpg" class="img-fluid rounded-start" alt="..."></a>
                   </div>
                   <div class="col-md-7">
                     <div class="card-body">
@@ -242,7 +242,7 @@
               <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
                 <div class="row">
                   <div class="col-md-5">
-                    <a href="https://www.irrompibles.net/42658-life-is-strange-true-colors-review/" target="_blank"><img src="/img/review2.jpg" class="img-fluid rounded-start" alt="..."></a>
+                    <a href="https://www.irrompibles.net/42658-life-is-strange-true-colors-review/" target="_blank"><img src="img/review2.jpg" class="img-fluid rounded-start" alt="..."></a>
                   </div>
                   <div class="col-md-7">
                     <div class="card-body">
@@ -257,7 +257,7 @@
               <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
                 <div class="row">
                   <div class="col-md-5">
-                    <a href="https://www.irrompibles.net/42645-tales-of-arise-review/" target="_blank"><img src="/img/review3.jpg" class="img-fluid rounded-start" alt="..."></a>
+                    <a href="https://www.irrompibles.net/42645-tales-of-arise-review/" target="_blank"><img src="img/review3.jpg" class="img-fluid rounded-start" alt="..."></a>
                   </div>
                   <div class="col-md-7">
                     <div class="card-body">
@@ -304,7 +304,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-4">
-                  <a href="https://www.irrompibles.net/42326-microsoft-lo-hizo-las-consolas-xbox-one-podran-correr-juegos-de-series-xs/" target="_blank"><img src="/img/noticias1.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/42326-microsoft-lo-hizo-las-consolas-xbox-one-podran-correr-juegos-de-series-xs/" target="_blank"><img src="img/noticias1.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-8">
                   <div class="card-body">
@@ -319,7 +319,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-4">
-                  <a href="https://www.irrompibles.net/42709-ags-pasa-a-diciembre/" target="_blank"><img src="/img/noticias3.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/42709-ags-pasa-a-diciembre/" target="_blank"><img src="img/noticias3.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-8">
                   <div class="card-body">
@@ -334,7 +334,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-4">
-                  <a href="https://www.irrompibles.net/42492-nintendo-eshop-ya-disponible-en-switch-para-argentina/" target="_blank"><img src="/img/noticias6.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/42492-nintendo-eshop-ya-disponible-en-switch-para-argentina/" target="_blank"><img src="img/noticias6.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-8">
                   <div class="card-body">
@@ -354,7 +354,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-5">
-                  <a href="https://www.irrompibles.net/42228-patriot-viper-v765-review/" target="_blank"><img src="/img/tecnologia1.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/42228-patriot-viper-v765-review/" target="_blank"><img src="img/tecnologia1.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-7">
                   <div class="card-body">
@@ -369,7 +369,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-5">
-                  <a href="https://www.irrompibles.net/42091-cloudbook-pcbox-fire-review/" target="_blank"><img src="/img/tecnologia2.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/42091-cloudbook-pcbox-fire-review/" target="_blank"><img src="img/tecnologia2.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-7">
                   <div class="card-body">
@@ -384,7 +384,7 @@
             <div class="card border-danger text-white bg-dark mb-3 d-none d-xl-block" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-5">
-                  <a href="https://www.irrompibles.net/41709-nexxt-vektor-3600-review/" target="_blank"><img src="/img/tecnologia3.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/41709-nexxt-vektor-3600-review/" target="_blank"><img src="img/tecnologia3.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-7">
                   <div class="card-body">
@@ -417,7 +417,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-4">
-                  <a href="https://www.irrompibles.net/41509-abandoned-es-silent-hill-o-silent-gil/" target="_blank"><img src="/img/informes1.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/41509-abandoned-es-silent-hill-o-silent-gil/" target="_blank"><img src="img/informes1.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-8">
                   <div class="card-body">
@@ -432,7 +432,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-4">
-                  <a href="https://www.irrompibles.net/40962-cuando-el-hdd-de-tu-pc-no-es-irrompible/" target="_blank"><img src="/img/informes3.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/40962-cuando-el-hdd-de-tu-pc-no-es-irrompible/" target="_blank"><img src="img/informes3.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-8">
                   <div class="card-body">
@@ -452,7 +452,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-4">
-                  <a href="https://www.irrompibles.net/41334-e3-2021-nintendo-ni-tanto-no-es-verdad/" target="_blank"><img src="/img/coberturas1.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/41334-e3-2021-nintendo-ni-tanto-no-es-verdad/" target="_blank"><img src="img/coberturas1.jpg" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-8">
                   <div class="card-body">
@@ -467,7 +467,7 @@
             <div class="card border-danger text-white bg-dark mb-3" style="max-width: 700px;">
               <div class="row">
                 <div class="col-xl-4">
-                  <a href="https://www.irrompibles.net/41292-e3-2021-game-pass-hasta-en-la-sopa-o-sopa-hasta-en-el-game-pass/" target="_blank"><img src="/img/coberturas2.png" class="img-fluid rounded-start" alt="..."></a>
+                  <a href="https://www.irrompibles.net/41292-e3-2021-game-pass-hasta-en-la-sopa-o-sopa-hasta-en-el-game-pass/" target="_blank"><img src="img/coberturas2.png" class="img-fluid rounded-start" alt="..."></a>
                 </div>
                 <div class="col-xl-8">
                   <div class="card-body">
@@ -492,7 +492,7 @@
 
         <div class="footer-b">
           <p>El gamer no muere, respawnea</p>
-          <img src="/img/irrompibles-icono-2019-01-1050x550.png" alt="">
+          <img src="img/irrompibles-icono-2019-01-1050x550.png" alt="">
         </div>
 
         <div class="footer-c">
